Arreglado errores y configurando los sockets